--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,10 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v ./cmd/kubectl-sql-query.go
 
     - name: Test
       run: go test -v ./...
+
+    - name: Vet
+      run: go vet ./...
