--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go install -v ./...
+      run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
