--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: KinD (Kubernetes in Docker) Action
+    - name: Create a local Kubernetes cluster
       uses: engineerd/setup-kind@v0.5.0
 
-    - name: Run Integration Tests
-      run: |
-        kubectl cluster-info
-        echo "current-context:" $(kubectl config current-context)
-        echo "environment-kubeconfig:" ${KUBECONFIG}
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.17
+
+    - name: Install
+      run: go install -v ./...
+
+    - name: Run integration tests
+      run: go test --tags=integration ./...
