--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
       run: go install -v ./...
 
     - name: Run integration tests
-      run: go test --tags=integration ./...
+      run: go test -v --tags=integration ./...
