--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,10 @@ builds:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm
+      - arm64
 archives:
   - replacements:
       darwin: Darwin
